external-crates/move/crates/move-compiler/tests/move_check/parser/struct_native_with_fields.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/struct_native_with_fields.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_native_with_fields.move:3:21
  │
3 │     native struct S { f: u64 }
  │                     ^
  │                     │
  │                     Unexpected '{'
  │                     Expected ';'

